# s3-navigator

./: CLAUDE.md  INSTALL.md  LICENSE  README.md  SPECS.md  pyproject.toml  run.py  run.sh
.github/workflows/: build-pr.yml  coverage-badge.yml  coverage-comment.yml  dependency-review.yml  publish.yml  test.yml
s3_navigator/: __init__.py  cli.py  navigator.py  s3_client.py
s3_navigator/ui/: __init__.py  display.py
tests/: __init__.py  test_cli.py  test_cli_imports.py  test_navigator.py  test_s3_client.py  test_ui.py
