[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "s3-navigator"
version = "0.1.0"
description = "Norton Commander-style interface for browsing Amazon S3 buckets"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Jochem Berends", email = "jochem.berends@example.com"}
]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities"
]
dependencies = [
    "boto3",
    "click",
    "textual",  # Use textual for TUI
    "yaspin",
    "termcolor"
]

[project.urls]
"Homepage" = "https://github.com/jberends/s3-navigator"
"Bug Tracker" = "https://github.com/jberends/s3-navigator/issues"

[project.scripts]
s3-navigator = "s3_navigator.cli:main"

[tool.ruff]
# Ruff configuration
line-length = 88
target-version = "py39"

# Format settings
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# Linting settings
[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "TID",  # flake8-tidy-imports
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
    "D",    # pydocstyle
    "N",    # pep8-naming
    "ANN",  # flake8-annotations (type hints)
]
ignore = [
    "D203",  # One blank line before class docstring
    "D107",  # Missing docstring in __init__
    "D212",  # Multi-line docstring summary should start at the first line
]

[tool.ruff.lint.per-file-ignores]
# Tests can use assertions and have wider line lengths
"tests/**/*.py" = ["S101", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["s3_navigator"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.0.0",
    "botocore-stubs>=1.31.64",
    "types-boto3>=1.0.0",
    "build>=1.0.0",
    "twine>=4.0.0"
]
